# advanced-rag-vllm

./: .gitignore  ADR_Advanced_RAG_Architecture.md  README.md  ingestion.py  main.py  pyproject.toml  streamlit_app.py
.chroma/: chroma.sqlite3
api/: app.py  auth.py  schemas.py
evaluation/: RUBRIC.md  __init__.py  benchmark.jsonl  desmi_nsl_benchmark.jsonl  run_evals.py
evaluation/tests/: test_run_evals.py
graph/: config.py  consts.py  graph.py  local_questions.py  state.py
graph/chains/: answer_grader.py  generation.py  hallucination_grader.py  llm.py  retrieval_grader.py  router.py
graph/nodes/: __init__.py  fallback.py  generate.py  grade_documents.py  retrieve.py  web_search.py
graph/tests/: test_graph_routing.py
tmp/pdfs/: render_adr_pdf.py
