[project]
name = "advanced-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "black>=26.3.1",
    "fastapi>=0.135.3",
    "isort>=8.0.1",
    "langchain>=1.2.15",
    "langchain-chroma>=1.1.0",
    "langchain-classic>=1.0.3",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.1",
    "langchain-huggingface>=1.2.1",
    "langchain-openai>=1.1.12",
    "langchain-tavily>=0.2.17",
    "langgraph>=1.1.6",
    "pytest>=9.0.2",
    "pypdf>=6.4.0",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.3.0",
    "slowapi>=0.1.9",
    "tavily-python>=0.7.23",
    "tiktoken>=0.12.0",
    "uvicorn>=0.44.0",
]
